:bug: Fixed issues with CORS and location header on new payment
